# rust-backend-starter

./: Cargo.toml
src/: app_state.rs  lib.rs  main.rs  middleware.rs  router.rs
