[package]
name = "vihub_faker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.204", features = ["derive"] }
